<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Survey</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="entrar">Go in</string>
    <string name="encuesta">Survey</string>
    <string name="view_survey">See Surveys</string>
    <string name="create_survey">Create Survey</string>
    <string name="add_question">Add Question</string>
    <string name="Welcome">Welcome</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="SurveyName">Name</string>
    <string name="SurveyQuestion">Question</string>
    <string name="AddQuestionToSurvey">Add Question</string>
    <string name="PostOnTwitter">Twitt with:</string>
    <string name="TweetText">Tweet</string>
    <string name="Back">Regresar</string>
    <string name="Next">Siguiente</string>
    <string name="facebook_app_id">1498161220422124</string>
    <string name="writeAnswer">Write a answer</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    
    
    <string name="twitter_callback">http://community.android.app</string>
    <string name="twitter_consumer_key">2eXAqu06SWmIsoYilYFcJPYje</string>
    <string name="twitter_consumer_secret">eNWEQK8BxKoTEtc6OLILWilxFqfIre4sofR37hnQX4OewjwcIC</string>
    <string name="twitter_oauth_verifier">oauth_verifier</string>
    <string name="EnterTask">Go Task</string>
    
    
</resources>