<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvHouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="18dp"
        android:text="@string/PostOnTwitter"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvHouse"
        android:layout_below="@+id/tvHouse"
        android:layout_marginTop="114dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editPost"
        android:layout_alignRight="@+id/tvHouse"
        android:layout_below="@+id/editPost"
        android:layout_marginTop="34dp"
        android:text="@string/TweetText" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnFacebook"
        android:layout_alignBottom="@+id/btnFacebook"
        android:layout_marginLeft="27dp"
        android:layout_toRightOf="@+id/btnFacebook"
        android:text="@string/Back" />

</RelativeLayout>
