<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.community.survey.MainActivity" >

    <TextView
        android:id="@+id/mainActivity_surveyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/Welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />
    
    <Button
        android:id="@+id/mainActivity_enterButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mainActivity_taskButton"
        android:layout_below="@+id/mainActivity_surveyText"
        android:layout_marginTop="32dp"
        android:text="@string/entrar" />

    <com.facebook.widget.LoginButton
        android:id="@+id/mainActivity_btnLoginFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/mainActivity_taskButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:text="@string/EnterTask" />

    <ImageView
        android:id="@+id/loginTwitter"
        android:layout_width="300px"
        android:layout_height="100px"
        android:layout_below="@+id/mainActivity_btnLoginFacebook"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/login_button" />

</RelativeLayout>